src/test/ui/error-codes/E0586.stderr
error[E0586]: inclusive range with no end
  --> $DIR/E0586.rs:3:22
   |
LL |     let x = &tmp[1..=];
   |                      ^
   |
   = help: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0586`.
